--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<title>Vite + React</title>
 	</head>
 	<body class="dark-mode-variables">
+		<div id="modal-root"></div>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
