Re-structure project, Re-write on vanilla js
1. Setup all pages
2. Complete fetching all subjects
3. Complete subject update

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 			href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
 			rel="stylesheet"
 		/>
+		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Vite + React</title>
 	</head>
 	<body class="dark-mode-variables">
+		<div id="modal"></div>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
