--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
-			rel="stylesheet"
-		/>
-		<script src="https://cdn.tailwindcss.com"></script>
-		<title>Vite + React</title>
+		<title>Vite + React + TS</title>
 	</head>
 	<body class="dark-mode-variables">
-		<div id="modal"></div>
 		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
